New Section Created

--- a/index.html
+++ b/index.html
@@ -8,6 +8,18 @@
    
 </head>
 <body>
+    <header class="header-section">
+        <div class="navber">
+            <ul class="menu">
+                <li><a href="#">Home</a></li>
+                <li><a href="#">About</a></li>
+                <li><a href="#">Services</a></li>
+                <li><a href="#">Contact us</a></li>
+            </ul>
+        </div>
+    </header>
+
+
     <section>
         <div class="half-section">
             <div class="left-content">
@@ -19,12 +31,12 @@
             
         </div>
         <div class="half-section">
-            <img src="image/picture1.png" alt="">
+            <img src="image/T-5.png" alt="">
         </div>
     </section>
     <section>
         <div class="half-section second-img">
-            <img src="image/picture3.png" alt="">
+            <img src="image/T-1.png" alt="">
         </div>
         <div class="half-section">
             <div class="left-content">
@@ -38,6 +50,7 @@
     </section>
     <section class="latest-working-project">
         <h3 class="latest"><span>LATEST</span> WORKING PROJECT</h3>
+
         <div class="all-project">
             <div class="working-project">
                 <img src="image/image 4.png" alt="">
@@ -56,30 +69,46 @@
             </div>
         </div>
     </section>
-    <section class="my-service">
-        <div class="all-service">
-            <div class="service-name">
-                <h4>Graphic Design</h4>
-                <p>Lorem ipsum dolor sit amet, consectetur adipisicing elit. Repudiandae eligendi dolorem perferendis soluta quos accusantium illo nostrum quia iure in?</p>
+
+    <section class="latest-working-project service-part">
+        <h3 class="latest"><span>MY</span> SERVICES</h3>
+
+        <div class="all-project first-part">
+            <div class="working-project">
+                <h3 class="title">Graphic Design</h3>
+                <p>Lorem ipsum dolor sit amet, consectetur adipisicing elit. Ullam consequatur autem enim a modi harum eaque perspiciatis. Laboriosam fuga animi magni provident tempore vitae quam pariatur provident tempore vitae quam pariatur</p>
             </div>
-            <div class="service-name">
-                <h4>Web Development</h4>
-                <p>Lorem ipsum dolor sit amet, consectetur adipisicing elit. Repudiandae eligendi dolorem perferendis soluta quos accusantium illo nostrum quia iure in?</p>
+            <div class="working-project">
+                <h3 class="title">Wed Development</h3>
+                <p>Lorem ipsum dolor sit amet, consectetur adipisicing elit. Ullam consequatur autem enim a modi harum eaque perspiciatis. Laboriosam fuga animi magni  provident tempore vitae quam pariatur provident tempore vitae quam pariatur</p>
             </div>
-            <div class="service-name">
-                <h4>Degital Marketing</h4>
-                <p>Lorem ipsum dolor sit amet, consectetur adipisicing elit. Repudiandae eligendi dolorem perferendis soluta quos accusantium illo nostrum quia iure in?</p>
+            <div class="working-project">
+                <h3 class="title">Digital Marketing</h3>
+                <p>Lorem ipsum dolor sit amet, consectetur adipisicing elit. Ullam consequatur autem enim a modi harum eaque perspiciatis. Laboriosam fuga animi magni  provident tempore vitae quam pariatur provident tempore vitae quam pariatur</p>
+            </div>
+            
+        </div>
+        <div class="all-project second-part">
+            <div class="working-project">
+                <h3 class="title">UI Design</h3>
+                <p>Lorem ipsum dolor sit amet, consectetur adipisicing elit. Ullam consequatur autem enim a modi harum eaque perspiciatis. Laboriosam fuga animi magni provident tempore vitae quam pariatur provident tempore vitae quam pariatur</p>
+            </div>
+            <div class="working-project">
+                <h3 class="title">SEO Service</h3>
+                <p>Lorem ipsum dolor sit amet, consectetur adipisicing elit. Ullam consequatur autem enim a modi harum eaque perspiciatis. Laboriosam fuga animi magni  provident tempore vitae quam pariatur provident tempore vitae quam pariatur</p>
+            </div>
+            <div class="working-project">
+                <h3 class="title">Content Writing</h3>
+                <p>Lorem ipsum dolor sit amet, consectetur adipisicing elit. Ullam consequatur autem enim a modi harum eaque perspiciatis. Laboriosam fuga animi magni  provident tempore vitae quam pariatur provident tempore vitae quam pariatur</p>
             </div>
         </div>
-
-
     </section>
     <section class="footer">
         <div class="contact">
             <div class="left">
             <h1>Work Enquary</h1>
         </div>
-            <div class="right"> <button class="button">Let's Chat</button></div>   
+            <div class="right"><button class="button">Let's Chat</button></div>   
         </div>
     </section>
 
